Added Release download count